# zephyr

./: west.yml
boards/arm/nucleo_h743zi/: nucleo_h743zi.dts
boards/arm/smartguardcom/: Kconfig.board  arduino_r3_connector.dtsi  board.c  board.cmake  smartguardcom.dts  smartguardcom_defconfig
drivers/clock_control/: Kconfig.stm32  Kconfig.stm32h7  clock_stm32_ll_h7.c
drivers/ethernet/: eth_stm32_hal.c
drivers/flash/: Kconfig.stm32_qspi  flash_stm32_qspi.c
drivers/modem/: quectel-bg9x.c  quectel-bg9x.h
dts/arm/st/h7/: stm32h7.dtsi  stm32h743.dtsi  stm32h743Xi.dtsi
include/drivers/clock_control/: stm32_clock_control.h
lib/libc/newlib/: libc-hooks.c
samples/net/gsm_modem/: CMakeLists.txt
samples/subsys/modbus/rtu_client/: CMakeLists.txt  app.overlay  prj.conf
samples/subsys/modbus/rtu_client/src/: main.c
samples/subsys/modbus/tcp_gateway/: CMakeLists.txt
samples/subsys/modbus/tcp_server/: CMakeLists.txt  prj.conf
samples/subsys/modbus/tcp_server/src/: main.c
share/zephyr-package/cmake/: current_path.txt
